<resources>
    <string name="app_name">BMI Calc</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="todo">TODO</string>
    <string name="_20">20</string>
    <string name="age">Age</string>
    <string name="kg">kg</string>
    <string name="_60">60</string>
    <string name="weight">Weight</string>
    <string name="_180">180</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="recalculate">Recalculate</string>
    <string name="your_result_is_nice_af">Your Result is nice af</string>
    <string name="_18_0">18.0</string>
    <string name="normal">Normal</string>
    <string name="your_results">Your Results</string>
</resources>