<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_background"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_appbar" />

    <LinearLayout
        android:id="@+id/lyGender"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/appbar"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnMale"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardBackgroundColor="@color/custom_selected">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/viewMale"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_gender_male" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewMale"
                    android:layout_centerHorizontal="true"
                    android:text="@string/male"
                    android:textAllCaps="true"
                    android:textColor="@color/custom_unselected" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnFemale"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            app:cardBackgroundColor="@color/custom_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/viewFemale"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_gender_female" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewFemale"
                    android:layout_centerHorizontal="true"
                    android:text="@string/female"
                    android:textAllCaps="true"
                    android:textColor="@color/custom_unselected" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSlider"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/lyGender"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/custom_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeadingHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="Height"
                android:textAllCaps="true"
                android:textColor="@color/custom_unselected"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/lyHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeadingHeight"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="180"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="cm"
                    android:textColor="@color/custom_unselected"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lyHeight"
                android:layout_marginHorizontal="10dp"
                android:stepSize="1"
                android:value="180.00"
                android:valueFrom="30.00"
                android:valueTo="200.00"
                app:labelBehavior="gone"
                app:thumbColor="@color/custom_blue"
                app:tickVisible="false"
                app:trackColorActive="@color/custom_blue"
                app:trackColorInactive="@color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lyDetails"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@id/cvSlider"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/custom_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHeadingWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="Weight"
                    android:textAllCaps="true"
                    android:textColor="@color/custom_unselected"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/lyWeightInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHeadingWeight"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="kg"
                        android:textColor="@color/custom_unselected"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lyWeightInfo"
                    android:layout_marginTop="6dp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnDecWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_baseline_remove_24" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnIncWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/custom_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHeadingAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="Age"
                    android:textAllCaps="true"
                    android:textColor="@color/custom_unselected"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHeadingAge"
                    android:layout_centerHorizontal="true"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAge"
                    android:layout_marginTop="6dp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnDecAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_baseline_remove_24" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnIncAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/lyDetails"
        android:layout_margin="10dp"
        android:backgroundTint="@color/custom_blue"
        android:text="@string/submit"
        android:textAllCaps="true" />

</RelativeLayout>